--- a/porocilo/document.tex
+++ b/porocilo/document.tex
@@ -5,44 +5,41 @@
 
 \begin{document}
 
-\title{Gradnja obširne knjižnice algoritmov po vzorih iz narave}
-\subtitle{[Projekt pri predmetu Povezljivi sistemi in inteligentne storitve]}
+\title{Detekcija žaljivega besedila}
+\subtitle{[Projekt pri predmetu Jezikovne tehnologije]}
 
-\numberofauthors{1}
+\numberofauthors{4}
 
 \author{
-\alignauthor
+\alignauthor 
+Andrej Hudrap\\
+       \affaddr{Fakulteta za računalništvo in informatiko, Maribor, Slovenija}\\
+       \email{andrej.hudrap@student.um.si}
+\alignauthor 
+Janez Krnc\\
+       \affaddr{Fakulteta za računalništvo in informatiko, Maribor, Slovenija}\\
+       \email{janz.krnc@student.um.si}  
+\alignauthor 
+Zan Bezjak\\
+       \affaddr{Fakulteta za računalništvo in informatiko, Maribor, Slovenija}\\
+       \email{zan.bezjak@student.um.si}
+\alignauthor 
 Klemen Berkovič\\
-       \affaddr{Fakulteta za računalništvo in informatiko}\\
-       \affaddr{Maribor, Slovenija}\\
+       \affaddr{Fakulteta za računalništvo in informatiko, Maribor, Slovenija}\\
        \email{klemen.berkovic@student.um.si}
-\alignauthor
 }
 
 \maketitle
 
 \begin{abstract}
-Algoritmi po vzorih iz narave so metode, za reševanje težkih optimizacijskih problemov.
-Delimo jih v evolucijske algoritme (angl. Evolutionary Algorithms, krajše EA) in algoritme inteligence rojev (angl. Swarm Intelligence, krajše SI).
-Medtem ko so evolucijski algoritmi že preživeli svojo dobo zorenja in imajo dobro izdelano klasifikacijo z jasno definiranimi vrstami algoritmov (tj. genetski algoritmi, genetsko programiranje, evolucijske strategije in evolucijsko programiranje), pa razvoj na področju intelidence rojev še zdaleč ni zaključen.
-Do danes je bilo tako razvitih prek 200 različnih algoritmov te vrste.
-Ker do sedaj še ne obstaja neke robustne knjižnice, ki bi vključevala velik nabor teh algoritmov, je ta projekt namenjen ravno temu.
+TODO
 \end{abstract}
 
-\keywords{inteligence rojev, evolucijski algoritmi, genetski algoritmi, genetsko programiranje, evolucijske strategije, evolucijsko programiranje}
+\keywords{TODO}
 
 \section{Uvod}
-Ker je projekt obširen, priporočamo, da na njem dela čim več študentov.
-Pričakovani cilji so dobro dokumentirana knjižnica, ki bo vsebovala čim več algoritmov po vzorih iz narave.
-Priporočljivo je, da študenti kodirajo v enem izmed naslednjih programskih jezikov: Python/Ruby/C++.
-Rezultate tega projekta lahko javno objavimo na Github-u, da ga lahko uporabljajo in nadgrajujejo tudi drugi uporabniki.
+TODO
 
-Seznam algoritmov~\cite{DBLP:journals/corr/FisterYFBF13}.
-
-\section{Opis rešitve}
-V svojem projektu bom poizkušal implementirati evolucijska algoritma objavljena v člankih~\cite{Brest:2006:SCP:2221387.2221799, Drias:2005:CBS:2152530.2152575}, ter algoritma inteligence rojev objavljena v člankih~\cite{Karaboga2007, Yang2010}.
-Za implementacijo rešitve bom uporabil programski jezik Python.
-Projekt bom objavil na spletnem mestu GitHub na naslovu \url{https://github.com/kb2623/agents}.
 
 \bibliographystyle{abbrv}
 \bibliography{sigproc} 
