--- a/porocilo/document.tex
+++ b/porocilo/document.tex
@@ -33,6 +33,7 @@ Klemen Berkovič\\
 
 \begin{abstract}
 TODO
+Članki~\cite{Burnap2016, Chen:2012:DOL:2411131.2411739, POI3:POI385}
 \end{abstract}
 
 \keywords{TODO}
