--- a/porocilo/sigproc.bib
+++ b/porocilo/sigproc.bib
@@ -1,97 +1,45 @@
-@article{DBLP:journals/corr/FisterYFBF13,
-  author    = {Iztok Fister Jr. and
-               Xin{-}She Yang and
-               Iztok Fister and
-               Janez Brest and
-               Dusan Fister},
-  title     = {A Brief Review of Nature-Inspired Algorithms for Optimization},
-  journal   = {CoRR},
-  volume    = {abs/1307.4186},
-  year      = {2013},
-  url       = {http://arxiv.org/abs/1307.4186},
-  timestamp = {Thu, 23 Feb 2017 11:34:26 +0100},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/FisterYFBF13},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+@inproceedings{Chen:2012:DOL:2411131.2411739,
+ author = {Chen, Ying and Zhou, Yilu and Zhu, Sencun and Xu, Heng},
+ title = {Detecting Offensive Language in Social Media to Protect Adolescent Online Safety},
+ booktitle = {Proceedings of the 2012 ASE/IEEE International Conference on Social Computing and 2012 ASE/IEEE International Conference on Privacy, Security, Risk and Trust},
+ series = {SOCIALCOM-PASSAT '12},
+ year = {2012},
+ isbn = {978-0-7695-4848-7},
+ pages = {71--80},
+ numpages = {10},
+ url = {http://dx.doi.org/10.1109/SocialCom-PASSAT.2012.55},
+ doi = {10.1109/SocialCom-PASSAT.2012.55},
+ acmid = {2411739},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+ keywords = {cyberbullying, adolescent safety, offensive languages, social media},
 }
 
-@incollection{Fister2015Adaptation,
- author = {Fister, Iztok and Strnad, Damjan and Yang, Xin-She and Fister Jr., Iztok},
- booktitle = {Adaptation and Hybridization in Computational Intelligence},
- pages = {3--50},
- publisher = {Springer},
- title = {Adaptation and hybridization in nature-inspired algorithms},
- year = {2015}
+@Article{Burnap2016,
+author="Burnap, Pete
+and Williams, Matthew L.",
+title="Us and them: identifying cyber hate on Twitter across multiple protected characteristics",
+journal="EPJ Data Science",
+year="2016",
+volume="5",
+number="1",
+pages="11",
+abstract="Hateful and antagonistic content published and propagated via the World Wide Web has the potential to cause harm and suffering on an individual basis, and lead to social tension and disorder beyond cyber space. Despite new legislation aimed at prosecuting those who misuse new forms of communication to post threatening, harassing, or grossly offensive language - or cyber hate - and the fact large social media companies have committed to protecting their users from harm, it goes largely unpunished due to difficulties in policing online public spaces. To support the automatic detection of cyber hate online, specifically on Twitter, we build multiple individual models to classify cyber hate for a range of protected characteristics including race, disability and sexual orientation. We use text parsing to extract typed dependencies, which represent syntactic and grammatical relationships between words, and are shown to capture `othering' language - consistently improving machine classification for different types of cyber hate beyond the use of a Bag of Words and known hateful terms. Furthermore, we build a data-driven blended model of cyber hate to improve classification where more than one protected characteristic may be attacked (e.g. race and sexual orientation), contributing to the nascent study of intersectionality in hate crime.",
+issn="2193-1127",
+doi="10.1140/epjds/s13688-016-0072-6",
+url="http://dx.doi.org/10.1140/epjds/s13688-016-0072-6"
 }
 
-@article{Brest:2006:SCP:2221387.2221799,
- author = {Brest, J. and Greiner, S. and Boskovic, B. and Mernik, M. and Zumer, V.},
- title = {Self-Adapting Control Parameters in Differential Evolution: A Comparative Study on Numerical Benchmark Problems},
- journal = {Trans. Evol. Comp},
- issue_date = {December 2006},
- volume = {10},
- number = {6},
- month = dec,
- year = {2006},
- issn = {1089-778X},
- pages = {646--657},
- numpages = {12},
- url = {http://dx.doi.org/10.1109/TEVC.2006.872133},
- doi = {10.1109/TEVC.2006.872133},
- acmid = {2221799},
- publisher = {IEEE Press},
- address = {Piscataway, NJ, USA},
- keywords = {Adaptive parameter control, differential evolution (DE), evolutionary optimization},
-} 
-
-@inproceedings{Drias:2005:CBS:2152530.2152575,
- author = {Drias, Habiba and Sadeg, Souhila and Yahi, Safa},
- title = {Cooperative Bees Swarm for Solving the Maximum Weighted Satisfiability Problem},
- booktitle = {Proceedings of the 8th International Conference on Artificial Neural Networks: Computational Intelligence and Bioinspired Systems},
- series = {IWANN'05},
- year = {2005},
- isbn = {3-540-26208-3, 978-3-540-26208-4},
- location = {Barcelona, Spain},
- pages = {318--325},
- numpages = {8},
- url = {http://dx.doi.org/10.1007/11494669_39},
- doi = {10.1007/11494669_39},
- acmid = {2152575},
- publisher = {Springer-Verlag},
- address = {Berlin, Heidelberg},
-} 
-
-@Article{Karaboga2007,
-author="Karaboga, Dervis
-and Basturk, Bahriye",
-title="A powerful and efficient algorithm for numerical function optimization: artificial bee colony (ABC) algorithm",
-journal="Journal of Global Optimization",
-year="2007",
-volume="39",
-number="3",
-pages="459--471",
-abstract="Swarm intelligence is a research branch that models the population of interacting agents or swarms that are able to self-organize. An ant colony, a flock of birds or an immune system is a typical example of a swarm system. Bees' swarming around their hive is another example of swarm intelligence. Artificial Bee Colony (ABC) Algorithm is an optimization algorithm based on the intelligent behaviour of honey bee swarm. In this work, ABC algorithm is used for optimizing multivariable functions and the results produced by ABC, Genetic Algorithm (GA), Particle Swarm Algorithm (PSO) and Particle Swarm Inspired Evolutionary Algorithm (PS-EA) have been compared. The results showed that ABC outperforms the other algorithms.",
-issn="1573-2916",
-doi="10.1007/s10898-007-9149-x",
-url="http://dx.doi.org/10.1007/s10898-007-9149-x"
+@article {POI3:POI385,
+author = {Burnap, Pete and Williams, Matthew L.},
+title = {Cyber Hate Speech on Twitter: An Application of Machine Classification and Statistical Modeling for Policy and Decision Making},
+journal = {Policy & Internet},
+volume = {7},
+number = {2},
+issn = {1944-2866},
+url = {http://dx.doi.org/10.1002/poi3.85},
+doi = {10.1002/poi3.85},
+pages = {223--242},
+keywords = {Twitter, hate speech, Internet, policy, machine classification, statistical modeling, cyber hate, ensemble classifier},
+year = {2015},
 }
-
-@Inbook{Yang2010,
-author="Yang, Xin-She",
-editor="Gonz{\'a}lez, Juan R.
-and Pelta, David Alejandro
-and Cruz, Carlos
-and Terrazas, Germ{\'a}n
-and Krasnogor, Natalio",
-title="A New Metaheuristic Bat-Inspired Algorithm",
-bookTitle="Nature Inspired Cooperative Strategies for Optimization (NICSO 2010)",
-year="2010",
-publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
-pages="65--74",
-isbn="978-3-642-12538-6",
-doi="10.1007/978-3-642-12538-6_6",
-url="http://dx.doi.org/10.1007/978-3-642-12538-6_6"
-}
-
-
-
