--- a/porocilo/document.tex
+++ b/porocilo/document.tex
@@ -32,7 +32,11 @@ Klemen Berkovič\\
 \maketitle
 
 \begin{abstract}
-TODO
+Razmah interneta in kasneje socialnih omrežij je v naše življenje prinesel mnogo tako pozitivnih, kot tudi negativnih posledic.
+Ena izmed negativnih posledic je tudi razmah negativnega, sovražnega in žaljivega govora
+Pri predmetu Jezikovne tehnologije se bomo znotraj projektne skupine osredotočili na detekcijo in zaznavo prav takšnih besedil oziroma delov besedil znotraj daljših sestavkov.
+Kot že omenjeno se takšna vrsta besedil v veliki meri pojavlja na raznih socialnih omrežjih, forumih in ostalih mestih, kjer lahko uporabniki med seboj komunicirajo in zaradi tega bomo testna besedila jemali iz virov kot so Facebook, 24ur.com, slo-tech.com forumi.
+Cilj našega projekta je spisati algoritem in program, ki bo sovražni in nezaželjen govor prepoznal ter besedilo prijavil administratorju, ki bi seveda lahko besedilo očistil žaljivih besed oziroma le-to v celoti odstranil.
 Članki~\cite{Burnap2016, Chen:2012:DOL:2411131.2411739, POI3:POI385}
 \end{abstract}
 
