Dodane kljucne besede, ter odstranjeni naslovi.

--- a/porocilo/document.tex
+++ b/porocilo/document.tex
@@ -40,11 +40,7 @@ Cilj našega projekta je spisati algoritem in program, ki bo sovražni in nezaž
 Članki~\cite{Burnap2016, Chen:2012:DOL:2411131.2411739, POI3:POI385}
 \end{abstract}
 
-\keywords{TODO}
-
-\section{Uvod}
-TODO
-
+\keywords{sovražni govor, žaljivi govor, žaljivke, zaznava žaljivk, detekcija žaljivk, preučevanje besedila}
 
 \bibliographystyle{abbrv}
 \bibliography{sigproc} 
