Dodana tabela, ki opisuje tipe tagov.

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -6,7 +6,10 @@
    "source": [
     "Namesti:\n",
     "* python-nltk\n",
-    "* python-scikit-learn"
+    "* python-scikit-learn\n",
+    "\n",
+    "Pomoc:\n",
+    "* [Knjiga](http://www.nltk.org/book_1ed/)"
    ]
   },
   {
@@ -754,13 +757,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part of Speech Tagging"
+    "# Part of Speech Tagging\n",
+    "\n",
+    "Tag | Meaning |\tExamples\n",
+    "-- | -- | --\n",
+    "ADJ | adjective | new, good, high, special, big, local\n",
+    "ADV | adverb | really, already, still, early, now\n",
+    "CNJ | conjunction | and, or, but, if, while, although\n",
+    "DET | determiner | the, a, some, most, every, no\n",
+    "EX | existential | there, there's\n",
+    "FW | foreign word | dolce, ersatz, esprit, quo, maitre\n",
+    "MOD | modal verb | will, can, would, may, must, should\n",
+    "N | noun | year, home, costs, time, education\n",
+    "NP | proper noun | Alison, Africa, April, Washington\n",
+    "NUM | number | twenty-four, fourth, 1991, 14:24\n",
+    "PRO | pronoun | he, their, her, its, my, I, us\n",
+    "P | preposition | on, of, at, with, by, into, under\n",
+    "TO | the word to | to\n",
+    "UH | interjection | ah, bang, ha, whee, hmpf, oops\n",
+    "V | verb | is, has, get, do, make, see, run\n",
+    "VD | past tense | said, took, told, made, asked\n",
+    "VG | present participle | making, going, playing, working\n",
+    "VN | past participle | given, taken, begun, sung\n",
+    "WH | wh determiner | who, which, when, what, where, how"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import nltk\n",
