--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -758,7 +758,7 @@
    "metadata": {},
    "source": [
     "# Part of Speech Tagging\n",
-    "\n",
+    "## Simplified Part-of-Speech Tagset\n",
     "Tag | Meaning |\tExamples\n",
     "-- | -- | --\n",
     "ADJ | adjective | new, good, high, special, big, local\n",
