Podane povezave do dodatnih pomoci.

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -9,7 +9,9 @@
     "* python-scikit-learn\n",
     "\n",
     "Pomoc:\n",
-    "* [Knjiga](http://www.nltk.org/book_1ed/)"
+    "* [Knjiga Python 2](http://www.nltk.org/book_1ed/)\n",
+    "* [Knkiga Pytnon 3](http://www.nltk.org/book/)\n",
+    "* [How to NLTK](http://www.nltk.org/howto/)"
    ]
   },
   {
