Popravek dokumenta, ter dodana predstavitev.

--- a/bow_jt.ipynb
+++ b/bow_jt.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'svmutil'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-cf2dfc0a680c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msvm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msvmutil\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'svmutil'"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import re\n",
@@ -19,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -53,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -102,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -143,8 +155,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_posamezne_besede(komentar, stopwords):\n",
@@ -171,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -209,8 +223,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def run(tekst, test_tekst, algoritem):\n",
@@ -276,7 +292,8 @@
     "        \n",
     "    # Pridobitev znacilk    \n",
     "    test_znacilke = get_znacilke(test_besede, besede)\n",
-    "    predvidevana_zaljivost, a, b = svm_predict(test_zaljivost, test_znacilke, ucenec, options = \"-b 1\")\n",
+    "    predvidevana_zaljivost, a, b = \n",
+    "        svm_predict(test_zaljivost, test_znacilke, ucenec, options = \"-b 1\")\n",
     "    \n",
     "    print(classification_report(test_zaljivost, predvidevana_zaljivost))\n",
     "    \n",
@@ -303,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -340,36 +357,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "BOW\n",
-      "Accuracy = 69.4% (694/1000) (classification)\n",
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "          0       0.67      0.74      0.71       494\n",
-      "          1       0.72      0.65      0.68       506\n",
-      "\n",
-      "avg / total       0.70      0.69      0.69      1000\n",
-      "\n",
-      "\n",
-      "NGRAM\n",
-      "Accuracy = 68.3% (683/1000) (classification)\n",
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "          0       0.66      0.73      0.69       494\n",
-      "          1       0.71      0.64      0.67       506\n",
-      "\n",
-      "avg / total       0.69      0.68      0.68      1000\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "main()"
    ]
