--- a/porocilo/document.tex
+++ b/porocilo/document.tex
@@ -8,27 +8,23 @@
 \title{Detekcija žaljivega besedila}
 \subtitle{[Projekt pri predmetu Jezikovne tehnologije]}
 
-\numberofauthors{4}
+\numberofauthors{6}
 
 \author{
-\alignauthor 
-Andrej Hudrap\\
-       \affaddr{Fakulteta za računalništvo in informatiko, Maribor, Slovenija}\\
-       \email{andrej.hudrap@student.um.si}
-\alignauthor 
-Janez Krnc\\
-       \affaddr{Fakulteta za računalništvo in informatiko, Maribor, Slovenija}\\
-       \email{janez.krnc@student.um.si}  
-\alignauthor 
-Zan Bezjak\\
-       \affaddr{Fakulteta za računalništvo in informatiko, Maribor, Slovenija}\\
-       \email{zan.bezjak@student.um.si}
-\alignauthor 
-Klemen Berkovič\\
-       \affaddr{Fakulteta za računalništvo in informatiko, Maribor, Slovenija}\\
-       \email{klemen.berkovic@student.um.si}
+\alignauthor Andrej Hudrap\\
+       \affaddr{Univerza v Mariboru, Fakulteta za računalništvo in informatiko, Smetanova ulica 17, 2000 Maribor, Slovenija}\\
+       \email{andrej.hudrap\linebreak[0]@student\linebreak[0].um\linebreak[0].si}
+\alignauthor Janez Krnc\\
+       \affaddr{Univerza v Mariboru, Fakulteta za računalništvo in informatiko, Smetanova ulica 17, 2000 Maribor, Slovenija}\\
+       \email{janez.krnc\linebreak[0]@student\linebreak[0].um\linebreak[0].si}
+\alignauthor Zan Bezjak\\
+       \affaddr{Univerza v Mariboru, Fakulteta za računalništvo in informatiko, Smetanova ulica 17, 2000 Maribor, Slovenija}\\
+       \email{zan.bezjak\linebreak[0]@student\linebreak[0].um\linebreak[0].si}
+\and
+\alignauthor Klemen Berkovič\\
+       \affaddr{Univerza v Mariboru, Fakulteta za računalništvo in informatiko, Smetanova ulica 17, 2000 Maribor, Slovenija}\\
+       \email{klemen.berkovic\linebreak[0]@student\linebreak[0].um\linebreak[0].si}
 }
-
 \maketitle
 
 \begin{abstract}
